--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                     <div class="mathsymbol">/</div>
                     <div class="field math-field"></div>
                 </div>
+                <div id="math-sqrt" class="math-operation">
+                    <div class="mathsymbol">√</div>
+                    <div class="field math-field"></div>
+                </div>
+                <div id="math-squ" class="math-operation">
+                    <div class="field math-field"></div>
+                    <div class="mathsymbol">²</div>
+                </div>
             </div>
             <div id="level"></div>
         </div>
