--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <div class="mathsymbol">²</div>
                 </div>
             </div>
+            <div id="menu">
+                <button onclick="reset()">Reset</button>
+            </div>
             <div id="level"></div>
         </div>
         <script src="main.js" charset="utf-8"></script>
